2010-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.ssc: regenerated for the move of InitParams
	initialization / cache.

2010-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.s[s]c: regenerated for 157456

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mscorlib.auto.s[s]c: regenerated for 157252.

2010-05-12  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.s[s]c: regenerated (again) for 157066
	* System.Net.auto.sc: regenerated (again) for 157066
	* System.Windows.auto.s[s]c: regenerated (again) for 157066
	also changed anonymous method to a normal one

2010-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.ssc: regenerated for overrides

2010-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.ssc: regenerated for 157066

2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.ssc: regen

2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* mscorlib.auto.sc:
	* System.Windows.auto.ssc: regen.

2010-05-06  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.s[s]c: regenerated for 156790
	* System.Net.auto.sc: regenerated for 156790

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.ssc: regenerated

2010-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.sc: regenerated for 156297

2010-04-27  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.ssc: regen.

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.ssc: regenerated wrt r155867

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.ssc: Update the sec. attrs.

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.sc: regenerated wrt 155643
	* mscorlib.auto.ssc: regenerated wrt 155643
	* System.Windows.auto.ssc: regenerated wrt 155643

2010-04-15  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.sc: Regenerated
