@@ -14,13 +14,13 @@ Requirements
 
 	At this time, Moonlight trunk (this release) requires you to use
 	Mono trunk. To build Moonlight, you need to get the mono, mcs and
-	mono-basic modules from trunk at the following revison: 157525
+	mono-basic modules from trunk at the following revison: 157698
 
 	Do this like this:
             svn co http://anonsvn.mono-project.com/source/trunk/moon
-            svn co -r 157525 http://anonsvn.mono-project.com/source/trunk/mono
-            svn co -r 157525 http://anonsvn.mono-project.com/source/trunk/mcs
-            svn co -r 157525 http://anonsvn.mono-project.com/source/trunk/mono-basic
+            svn co -r 157698 http://anonsvn.mono-project.com/source/trunk/mono
+            svn co -r 157698 http://anonsvn.mono-project.com/source/trunk/mcs
+            svn co -r 157698 http://anonsvn.mono-project.com/source/trunk/mono-basic
 
 
 Compiling Mono for Moonlight
